--- a/series-formelles.tex
+++ b/series-formelles.tex
@@ -586,13 +586,14 @@ dia = hcat' (with & sep .~ 3)
   the structure $t$''.
 
   A concrete example should help to clarify the idea. The trees $s$
-  and $t$ shown above are isomorphic, as witnessed by the relabelling
-  $u$.  Any other tree $t'$ of the ``same shape'' would also be
-  isomorphic to $s$, as long as there exists some bijection $u'$ which
-  swaps out the labels of $s$ for the corresponding labels in $t'$.
-  As an example of non-isomorphic tree structures, however, consider
-  the diagram below: there is no way to turn $s$ into $t$ merely by
-  permuting labels.
+  and $t$ shown in the example above are isomorphic, as witnessed by
+  the relabelling $u$.  Any other tree $t'$ of the ``same shape''
+  would also be isomorphic to $s$, as long as there exists some
+  bijection $u'$ which swaps out the labels of $s$ for the
+  corresponding labels in $t'$.  As an example of non-isomorphic tree
+  structures, however, consider the diagram below: there is no way to
+  turn $s$ into $t$ merely by permuting labels.  These two tree
+  structure are fundamentally different.
 
   \begin{center}
   \begin{diagram}[width=150]
