--- a/series-formelles.tex
+++ b/series-formelles.tex
@@ -619,15 +619,22 @@ dia = hsep 0.8
   earlier.  Here we see that the functorial mapping from a bijection
   on label sets to a bijection on sets of structures is exactly what
   allows us to ``transport'' structures along a bijection of
-  labels to get new, relabelled structures.
+  labels to get new, relabelled structures.  The fact that we can
+  always do this means that the precise nature of the labels does not
+  matter: there will always be \emph{some} set of labels to allow us
+  to talk about the atoms in a structure, but we get the same
+  structures no matter what labels we use.
 
-  \todoin{crux of the idea.  No complicated structural definition.  Just
-  defining species in terms of \emph{behavior}: create sets of
-  structures.  Those structures ``contain'' labels not in a direct,
-  structural sense, but in the sense that they can be relabelled
-  functorially.}
+  This is, it seems to me, the crux of Joyal's insight: replacing the
+  complicated \emph{intensional} definition of Bourbaki (defined as a
+  very explicit construction of sets and relations) with a simple,
+  \emph{extensional} definision.  Species are defined by their
+  behavior, that is, what we can \emph{do} with them, not by what they
+  \emph{are}: species are precisely those things which generate a set
+  of structures from a set of labels and which can be functorially
+  relabelled.
 
-  \todo{Insert here commentary from section 3.2.1 of thesis.}
+  \todo{Insert here commentary from section 3.2.1 of thesis?}
 \end{commentary}
 We denote by $\el (M)$ the category whose objects are the
 $M$-structures and whose morphisms are isomorphisms of $M$-structures;
