link to github repo

--- a/series-formelles.tex
+++ b/series-formelles.tex
@@ -201,7 +201,8 @@ like this:
 
 This is a long-term project; I do not know how long it will take to
 finish, but plan to work on it slowly and steadily.  Collaboration and
-contributions are welcome! \todo{link to git repo} Things I could
+contributions are welcome---see the public git repository hosted at
+\url{https://github.com/byorgey/series-formelles}. Things I could
 particularly use help with include:
 \begin{itemize}
 \item Translation.  If you know both French and English well, I would
@@ -242,7 +243,7 @@ framework\footnote{\url{http://projects.haskell.org/diagrams/}}) and
 commentary.
 
 A git repository containing the latest state of this project can be
-found at \todo{link to git repo}.
+found at \begin{quote}\url{https://github.com/byorgey/series-formelles}.\end{quote}
 
 \newpage
 
