start writing commentary re: types

--- a/series-formelles.tex
+++ b/series-formelles.tex
@@ -648,6 +648,23 @@ classes are the \term{connected components} of the groupoid $\el
 structures) of the species $M$. If $s \in M$, we denote the
 \term{type} of $s$ by the notation $|s| \in \pi_0 (M)$.
 
+\begin{commentary}
+  This definition of structure \emph{types} is an important one, and
+  worth unpacking a bit.  A \emph{type} of structures is formally
+  defined as an equivalence class of structures under isomorphism,
+  that is, under relabelling.  Intuitively, a type is a \emph{shape}
+  devoid of any labels.
+
+  For example, XXX use example related to trees $s$ and $t$ from
+  before.  Show a bunch of trees isomorphic to $s$ and show
+
+  Intuitively, we can think of types in terms of these pictures of
+  ``shapes'' with nondescript dots in place of labels.  This isn't
+  always good enough---for exampe, XXX---so it's good to be able to
+  return to the formal definition in terms of equivalence classes of
+  labelled structures.
+\end{commentary}
+
 \begin{ex}
   Recall that a \emph{simplicial scheme} structure on $E$ is a set
   $\Simp$ of non-empty subsets of $E$ such that (i) every non-empty
