--- a/series-formelles.tex
+++ b/series-formelles.tex
@@ -723,15 +723,26 @@ dia = (drawBinTreeWide . fmap (const (circle labR # fc black))) s
 
 \begin{commentary}
   This whole business with \emph{simplicial schemes} is unnecessarily
-  general in some sense, but it is a nice observation.  Geometrically,
-  \term{simplices} are what we get when we start with a single point
-  (a ``$0$-simplex''), and then repeatedly add points, each time
-  connecting the new point to all the previous points (and also
-  ``filling in'' the interior).  For example, a $1$-simplex is a line
-  segment between two points; a $2$-simplex is a (filled in) triangle;
-  a $3$-simplex is a solid tetrahedron; and after that they get harder
-  to visualize, but conceptually are just the natural generalization
-  of triangles and tetrahedra to $n$ dimensions.
+  general in some sense, but the point is that this allows Joyal to
+  deal in one fell swoop with a large collection of common species
+  (graphs, forests, trees\dots) which can all be seen as special cases
+  of the species of simplicial schemes, and also incidentally to have
+  a relevant motivation for introducing the concept of subspecies.  It
+  would be tedious to go through each slight variant on the concept of
+  a graph and show that it defines a valid species, but unsatisfying
+  to just wave our hands and say things like ``this case is
+  similar\dots''  By moving up a notch in abstraction, we get a
+  rigorous yet economical definition that handles many similar cases
+  at once.
+
+  Geometrically, \term{simplices} are what we get when we start with a
+  single point (a ``$0$-simplex''), and then repeatedly add points,
+  each time connecting the new point to all the previous points (and
+  also ``filling in'' the interior).  For example, a $1$-simplex is a
+  line segment between two points; a $2$-simplex is a (filled in)
+  triangle; a $3$-simplex is a solid tetrahedron; and after that they
+  get harder to visualize, but conceptually are just the natural
+  generalization of triangles and tetrahedra to $n$ dimensions.
   \begin{center}
   \begin{diagram}[width=200]
 dia =
@@ -769,7 +780,7 @@ collection of sets which we think of as a collection of simplices; the
 requirement that every non-empty subset of an element of $\Simp$ also
 belongs to $\Simp$ just means that whenever we have a simplex in our
 collection, all its faces, faces of faces, and so on, are also
-simplices in our collection.  
+simplices in our collection.
 
 The fact that the simplices in $\Simp$ are all built from some
 underlying set of labels $E$ means that they can share vertices, so
@@ -792,8 +803,13 @@ dia = mconcat
   \end{diagram}
   \end{center}
   XXX this is a graphical representation of the simplicial scheme XXX ...
-  
-  XXX talk about specific subspecies he gives.
+
+  Simplicial schemes, seeing as they consist simply of collections of
+  subsets of the underlying label type $E$, can clearly be
+  functorially relabelled---just apply the relabelling to each subset.
+
+  XXX talk about specific subspecies he gives.  graphs (notice what
+  simplicial schemes implies about self-loops, multiple edges, etc.)
 \end{commentary}
 \end{ex}
 
