--- a/series-formelles.tex
+++ b/series-formelles.tex
@@ -786,23 +786,32 @@ The fact that the simplices in $\Simp$ are all built from some
 underlying set of labels $E$ means that they can share vertices, so
 $\Simp$ is not just a collection of independent, disjoint simplices,
 but in general they can be glued together in various ways along their
-faces. For example,
+faces. For example, below is a graphical representation of the
+simplicial scheme
+\[
+  \{\{0\},\{1\},\{2\},\{3\},\{4\},\{1,3\},\{0,1\},\{0,2\},\{1,2\},\{0,1,2\}\}. \]
   \begin{center}
-  \begin{diagram}[width=100]
+  \begin{diagram}[width=150]
 dia = mconcat
   [ mconcat
-    [ foldMap (place pt) (triangle 1 :: [P2 Double])
-    , triangle 1 # fc lightblue
+    [ mconcat (zipWith (\(n,l) -> place (pt n l)) [(2,2),(3,0),(4,1)] (pathVertices t # concat))
+    , strokeP t # fc lightblue
     ]
-  , (hrule 1 # alignL <> pt) # alignR # rotate (20 @@ deg)
+  , (hrule 1 # alignL <> pt 4 3) # alignR
+  , pt 2 4 # translate (2 ^& 0.5)
   ]
   # frame 0.5
   # lwO 0.7
   where
-    pt = circle 0.08 # fc black
+    t  = triangle 1 # alignL # alignB :: Path V2 Double
+    pt n l = mconcat
+      [ circle 0.08 # fc black
+      , text ("$" ++ show l ++ "$")
+        # translate (unitX # scale (1/3) # rotateBy (fromIntegral n / 12))
+        # fontSizeO 10
+      ]
   \end{diagram}
   \end{center}
-  XXX this is a graphical representation of the simplicial scheme XXX ...
 
   Simplicial schemes, seeing as they consist simply of collections of
   subsets of the underlying label type $E$, can clearly be
