--- a/series-formelles.tex
+++ b/series-formelles.tex
@@ -814,8 +814,9 @@ dia = mconcat
   \end{center}
 
   Simplicial schemes, seeing as they consist simply of collections of
-  subsets of the underlying label type $E$, can clearly be
-  functorially relabelled---just apply the relabelling to each subset.
+  subsets of the underlying label type
+  $E$, can clearly be functorially relabelled---just apply the
+  relabelling to every subset.
 
   XXX talk about specific subspecies he gives.  graphs (notice what
   simplicial schemes implies about self-loops, multiple edges, etc.)
@@ -834,6 +835,12 @@ dia = mconcat
   $x_0 \in E$ such that for every $x \in E$ we have $\phi^n(x) = x_0$
   when $n$ is large enough. That is, a contraction is an endofunction
   which is ultimately constant.
+
+  \begin{commentary}
+    Illustrate transport for endofunctions?  XXX pictures illustrating
+    permutations, connected endofunctions, circular permutations,
+    contraction.  Need facility for drawing labelled graphs!
+  \end{commentary}
 \end{ex}
 
 \begin{ex}
