--- a/series-formelles.tex
+++ b/series-formelles.tex
@@ -439,14 +439,17 @@ to finitary species, unless otherwise noted.
   \emph{morphisms} (namely, natural transformations).  Any natural
   transformation between functors $\B \to \B$ is an isomorphism, so
   the functor category $\B^\B$ is a rather impoverished groupoid,
-  without things like products or coproducts.  Natural transformations
-  between functors $\B \to \E$, on the other hand, need not be
-  isomorphisms, and the functor category $\E^\B$ indeed admits nice
-  constructions such as products and coproducts, which turn out to
-  correspond to sensible operations on species.  Hence $\B \to \E$
-  really seems to be the ``right'' notion of species to use.  (I am
-  grateful to Ian Price for pointing out this fact to me, which I had
-  somehow missed even after many years of thinking about such things!)
+  without things like products or coproducts.  \todo{Expand this
+    explanation.  Natural transformations have to satisfy naturality
+    square, every side of which is an arrow in $\B$, so only natural
+    isomorphisms.}  Natural transformations between functors
+  $\B \to \E$, on the other hand, need not be isomorphisms, and the
+  functor category $\E^\B$ indeed admits nice constructions such as
+  products and coproducts, which turn out to correspond to sensible
+  operations on species.  Hence $\B \to \E$ really seems to be the
+  ``right'' notion of species to use.  (I am grateful to Ian Price for
+  pointing out this fact to me, which I had somehow missed even after
+  many years of thinking about such things!)
 \end{commentary}
 
 If $E$ is a finite set, $M [E]$ is the set of all \term{structures} of
